--- a/app/src/main/res/layout/dialog_seleziona_calendario.xml
+++ b/app/src/main/res/layout/dialog_seleziona_calendario.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -9,32 +9,38 @@
         android:id="@+id/textView14"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"
         android:text="Seleziona Account"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 
     <ListView
         android:id="@+id/lv_account"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginBottom="5dp"
+        android:visibility="visible" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_account_conferma"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
+            android:layout_marginRight="30dp"
             android:layout_weight="1"
+            android:background="@drawable/button_layout"
             android:text="Conferma" />
 
         <Button
             android:id="@+id/btn_account_indietro"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="35dp"
             android:layout_weight="1"
+            android:background="@drawable/button_layout"
             android:text="Indietro" />
     </LinearLayout>
 
