--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="button_text">#224734</color>
     <color name="colorPrimaryDark">#387758</color>
     <color name="colorPrimary">#4ABC84</color>
-    <color name="colorPrimaryChiaro">#744ABC84</color>
     <color name="intestazione">#4ABC84</color>
-    <color name="colorAccent">#78FFBD</color>
+    <color name="colorAccent">#4ABC84</color>
+    <color name="colorPrimaryChiaro">#744ABC84</color>
     <color name="verde_trasparente">#bfe3c3</color>
     <color name="grigio_chiaro">#E3E5E6</color>
     <color name="background_liste">#F6F4F4</color>
