--- a/app/src/main/res/drawable/layout_prenotazione_corso.xml
+++ b/app/src/main/res/drawable/layout_prenotazione_corso.xml
@@ -8,7 +8,7 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#B9FFB2"
+        android:color="#2D492A"
         />
     <corners android:radius="10dp" />
     <solid android:color="#B9FFB2"
