--- a/app/src/main/res/drawable/layout_prenotazione_corso_clicked.xml
+++ b/app/src/main/res/drawable/layout_prenotazione_corso_clicked.xml
@@ -8,7 +8,7 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#9CD896"
+        android:color="#2D492A"
         />
     <corners android:radius="10dp" />
     <solid android:color="#9CD896"
