--- a/app/src/main/res/drawable/layout_prenotazione_futura_clicked.xml
+++ b/app/src/main/res/drawable/layout_prenotazione_futura_clicked.xml
@@ -8,7 +8,7 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#E4DE73"
+        android:color="#6A6622"
         />
     <corners android:radius="10dp" />
     <solid android:color="#E4DE73"
