--- a/app/src/main/res/drawable/layout_prenotazione_terminata.xml
+++ b/app/src/main/res/drawable/layout_prenotazione_terminata.xml
@@ -8,7 +8,7 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#FFB4B4"
+        android:color="#682D2D"
         />
     <corners android:radius="10dp" />
     <solid android:color="#FFB4B4"
