--- a/app/src/main/res/drawable/layout_prenotazione_terminata_clicked.xml
+++ b/app/src/main/res/drawable/layout_prenotazione_terminata_clicked.xml
@@ -8,9 +8,9 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#E19191"
+        android:color="#682D2D"
         />
     <corners android:radius="10dp" />
-    <solid android:color="#E19191"
+    <solid android:color="#DC8585"
         android:alpha="150"/>
 </shape>
