--- a/app/src/main/res/layout/row_layout_componenti.xml
+++ b/app/src/main/res/layout/row_layout_componenti.xml
@@ -1,41 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <CheckBox
         android:id="@+id/checkComponente"
-        android:layout_width="204dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:text="A" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:textSize="16sp" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/txtNomeComponente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:textColor="#000000"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/txtCognomeComponente"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/txtNomeComponente"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:textColor="#000000"
-            android:textSize="18sp" />
-
-        <TextView
-            android:id="@+id/txtCognomeComponente"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_weight="1"
-            android:text="TextView"
-            android:textColor="#000000"
-            android:textSize="18sp" />
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
 </LinearLayout>
