--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFFFF"
-        android:gravity="center_vertical"
         android:orientation="vertical">
 
         <TextView
@@ -22,6 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="60dp"
             android:gravity="center_horizontal"
             android:text="@string/app_name"
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginBottom="40dp"
+            android:layout_marginBottom="60dp"
             app:srcCompat="@drawable/logo_size" />
 
         <ProgressBar
