--- a/app/src/main/res/layout/dialog_qr_code.xml
+++ b/app/src/main/res/layout/dialog_qr_code.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="TextView"
-        android:textSize="20sp" />
+        android:textColor="@color/colorPrimary"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView32"
