--- a/app/src/main/res/layout/activity_prenotazione_studente.xml
+++ b/app/src/main/res/layout/activity_prenotazione_studente.xml
@@ -27,7 +27,8 @@
                             android:gravity="center"
                             android:textColor="@color/intestazione"
                             android:textSize="24sp"
-                            app:fontFamily="@font/marko_one" />
+                            android:textStyle="bold"
+                            app:fontFamily="@font/el_messiri_medium" />
 
                         <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                             android:id="@+id/img_plant"
@@ -42,7 +43,7 @@
                             android:layout_height="match_parent"
                             android:gravity="center"
                             android:orientation="horizontal"
-                            android:visibility="gone">
+                            android:visibility="visible">
 
                                 <TextView
                                     android:id="@+id/textView17"
@@ -67,7 +68,7 @@
                             android:layout_gravity="center_horizontal"
                             android:layout_marginTop="10dp"
                             android:background="@drawable/forma_dialog"
-                            android:visibility="gone">
+                            android:visibility="visible">
 
                                 <TableRow
                                     android:layout_width="match_parent"
@@ -110,7 +111,8 @@
 
                                 <TableRow
                                     android:layout_width="match_parent"
-                                    android:layout_height="match_parent">
+                                    android:layout_height="match_parent"
+                                    android:gravity="center_vertical">
 
                                         <TextView
                                             android:id="@+id/textView27"
@@ -119,15 +121,40 @@
                                             android:text="Ora fine:"
                                             android:textSize="16sp" />
 
-                                        <TextView
-                                            android:id="@+id/pren_et_fine"
-                                            android:layout_width="wrap_content"
+                                        <LinearLayout
+                                            android:layout_width="match_parent"
                                             android:layout_height="match_parent"
-                                            android:textSize="16sp"
-                                            android:textStyle="bold" />
+                                            android:gravity="center_vertical"
+                                            android:orientation="horizontal">
+
+                                                <TextView
+                                                    android:id="@+id/pren_et_fine"
+                                                    android:layout_width="wrap_content"
+                                                    android:layout_height="match_parent"
+                                                    android:textSize="16sp"
+                                                    android:textStyle="bold" />
+
+                                                <ImageView
+                                                    android:id="@+id/pick_time_st"
+                                                    android:layout_width="20dp"
+                                                    android:layout_height="20dp"
+                                                    android:layout_marginLeft="10dp"
+                                                    app:srcCompat="@mipmap/pick_time" />
+
+                                        </LinearLayout>
+
                                 </TableRow>
 
                         </TableLayout>
+                        <TextView
+                            android:id="@+id/txt_er_stud"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:layout_marginTop="5dp"
+                            android:textColor="#FF0000"
+                            android:textSize="18sp"
+                            android:visibility="gone" />
 
                 </LinearLayout>
         </ScrollView>
@@ -141,5 +168,5 @@
             android:background="@drawable/button_layout"
             android:text="Conferma"
             android:textColor="@color/button_text"
-            android:visibility="gone" />
+            android:visibility="visible" />
 </LinearLayout>
