--- a/app/src/main/res/layout/activity_prenotazione_studente_aula_gruppo.xml
+++ b/app/src/main/res/layout/activity_prenotazione_studente_aula_gruppo.xml
@@ -27,7 +27,7 @@
                 android:gravity="center"
                 android:textColor="@color/intestazione"
                 android:textSize="24sp"
-                app:fontFamily="@font/marko_one" />
+                app:fontFamily="@font/el_messiri_medium" />
 
             <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                 android:id="@+id/img_plant_studgruppo"
@@ -104,11 +104,13 @@
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
                         android:textStyle="bold" />
+
                 </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
 
                     <TextView
                         android:id="@+id/textView27_studgruppo"
@@ -117,24 +119,30 @@
                         android:text="Ora fine:"
                         android:textSize="16sp" />
 
-                    <TextView
-                        android:id="@+id/pren_et_fine_studgruppo"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:textSize="16sp"
-                        android:textStyle="bold" />
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/pren_et_fine_studgruppo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                        <ImageView
+                            android:id="@+id/pick_time_stgr"
+                            android:layout_width="20dp"
+                            android:layout_height="20dp"
+                            android:layout_marginLeft="5dp"
+                            app:srcCompat="@mipmap/pick_time" />
+                    </LinearLayout>
+
                 </TableRow>
 
             </TableLayout>
-
-            <TextView
-                android:id="@+id/txt_er_studgruppo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:textColor="#FF0000"
-                android:textSize="18sp"
-                android:visibility="gone" />
 
         </LinearLayout>
     </ScrollView>
