--- a/app/src/main/res/drawable/layout_docente_clicked.xml
+++ b/app/src/main/res/drawable/layout_docente_clicked.xml
@@ -8,9 +8,9 @@
         />
     <stroke
         android:width="1dp"
-        android:color="#FFFFFF"
+        android:color="#46AF4A"
         />
     <corners android:radius="10dp" />
-    <solid android:color="#FFFFFFFF"
+    <solid android:color="#7476CAA1"
         android:alpha="150"/>
 </shape>
