--- a/app/src/main/res/drawable/layout_gruppo_clicked.xml
+++ b/app/src/main/res/drawable/layout_gruppo_clicked.xml
@@ -7,8 +7,8 @@
         android:bottom="4dp"
         />
     <stroke
-        android:width="0.5dp"
-        android:color="@android:color/black"
+        android:width="1dp"
+        android:color="#327E35"
         />
     <corners android:radius="10dp" />
     <solid android:color="#E8E8E8"
