--- a/app/src/main/res/layout/dialog_user.xml
+++ b/app/src/main/res/layout/dialog_user.xml
@@ -21,10 +21,17 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView15"
+                android:id="@+id/img_dialog_user"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 app:srcCompat="@drawable/studente" />
+
+            <ImageView
+                android:id="@+id/img_dialog_user_docente"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:visibility="gone"
+                app:srcCompat="@drawable/docente" />
         </LinearLayout>
 
         <LinearLayout
