--- a/app/src/main/res/layout/row_layout_lista_gruppi_docente.xml
+++ b/app/src/main/res/layout/row_layout_lista_gruppi_docente.xml
@@ -3,7 +3,7 @@
     android:id="@+id/rowGruppiDocente"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/layout_gruppo_complete"
+    android:background="@drawable/layout_docente_complete"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -12,24 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:textSize="22sp" />
+        android:gravity="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/codiceGruppo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/dataScadenza"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/oreRimanenti"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp" />
+        android:layout_marginBottom="5dp"
+        android:gravity="center_horizontal" />
 
 </LinearLayout>
