--- a/app/src/main/res/layout/my_action_bar.xml
+++ b/app/src/main/res/layout/my_action_bar.xml
@@ -11,7 +11,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginRight="10dp"
-        app:srcCompat="@drawable/user" />
+        app:srcCompat="@drawable/user_circle" />
 
     <TextView
         android:id="@+id/txt_actionbar"
